--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,6 @@
         "vscode"
     ],
     "shutdownAction": "stopCompose",
-    "postCreateCommand": "~/.windows.sh && go mod download && go mod tidy",
     "workspaceFolder": "/workspace",
     // "overrideCommand": "",
     "customizations": {
@@ -27,13 +26,13 @@
                 "redhat.vscode-yaml", // Kubernetes, Drone syntax highlighting
                 "bajdzis.vscode-database", // Supports connections to mysql or postgres, over SSL, socked
                 "IBM.output-colorizer", // Colorize your output/test logs
-                "github.copilot" // AI code completion
-                // "mohsen1.prettify-json", // Prettify JSON data
-                // "zxh404.vscode-proto3", // Supports Proto syntax
-                // "jrebocho.vscode-random", // Generates random values
-                // "alefragnani.Bookmarks", // Manage bookmarks
-                // "quicktype.quicktype", // Paste JSON as code
-                // "spikespaz.vscode-smoothtype", // smooth cursor animation
+                "github.copilot", // AI code completion
+                "mohsen1.prettify-json", // Prettify JSON data
+                "zxh404.vscode-proto3", // Supports Proto syntax
+                "jrebocho.vscode-random", // Generates random values
+                "alefragnani.Bookmarks", // Manage bookmarks
+                "quicktype.quicktype", // Paste JSON as code
+                "spikespaz.vscode-smoothtype", // smooth cursor animation
             ],
             "settings": {
                 "files.eol": "\n",
